[package]
name = "muscle_booster"
version = "0.1.0"
edition = "2021"

[dependencies]
openai-api-rs = "5.0.4"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v7"] }
